--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
+    "react-slick": "^0.28.1",
     "save-dev": "0.0.1-security",
     "swiper": "^6.8.1",
     "web-vitals": "^1.1.2"
