--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "react": "^17.0.2",
+    "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
+    "react-spring": "^9.2.4",
     "save-dev": "0.0.1-security",
     "swiper": "^6.8.1",
     "web-vitals": "^1.1.2"
