--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-intersection-observer": "^8.32.0",
     "react-parallax": "^3.3.0",
     "react-reveal": "^1.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.3",
     "react-slick": "^0.28.1",
