--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-porfolio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://JackNLewis.github.io/portfolio",
+  "homepage": "https://JackNLewis.github.io/portfolio/",
   "dependencies": {
     "-": "0.0.1",
     "@material-ui/core": "^4.12.3",
@@ -10,6 +10,8 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "emailjs": "^3.6.0",
+    "emailjs-com": "^3.2.0",
     "react": "^17.0.2",
     "react-bootstrap": "^1.6.1",
     "react-dom": "^17.0.2",
